# librealsense

./: .gitignore  CMakeLists.txt  conanfile.py  override.props  readme.md
.github/workflows/: main.yml
CMake/: android_config.cmake  include_os.cmake
include/librealuvc/: realuvc.h  realuvc_driver.h  ru_common.h  ru_hid.h  ru_usb.h  ru_uvc.h  ru_videocapture.h
src/: CMakeLists.txt  backend.cpp  backend.h  driver_peripheral.cpp  driver_rigel.cpp  drivers.h  log.cpp  realuvc_driver.cpp  types.h  videocapture.cpp
src/android/: CMakeLists.txt  android-backend.cpp  android-backend.h  android-hid.cpp  android-hid.h  android-uvc-device.cpp  android-uvc-device.h  android-uvc.cpp  android-uvc.h  uvc_types.h
src/android/jni/: java_env.cpp  java_env.h
src/android/usb_host/: android_uvc.cpp  android_uvc.h  device_enumerator.cpp  device_enumerator.h  device_watcher.cpp  device_watcher.h  small_heap.h  usb_configuration.h  usb_device.cpp  usb_device.h  usb_endpoint.h  usb_interface.h  usb_interface_association.h  usb_pipe.cpp  usb_pipe.h  usbhost.c  usbhost.h
src/win/: win-helpers.cpp  win-uvc.cpp  win-uvc.h
